RESOLVED FIXED306989
Mysterious crashes under StyleLengthResolution::adjustValueForPageZoom
https://bugs.webkit.org/show_bug.cgi?id=306989
Summary Mysterious crashes under StyleLengthResolution::adjustValueForPageZoom
Sammy Gill
Reported 2026-02-04 14:19:53 PST
It seems like it is possible for us to hit a CheckedRef crash in this function when we go to get the page zoom factor from RenderView. RenderView does this by accessing it's LocalFrameView, which is a CheckedRef, and it seems to have gotten destroyed underneath us which triggers a RELEASE_ASSERT
Attachments
Sammy Gill
Comment 1 2026-02-04 14:20:19 PST
Sammy Gill
Comment 2 2026-02-04 14:55:35 PST
EWS
Comment 3 2026-02-05 20:12:04 PST
Committed 306918@main (a7e0750c3077): <https://commits.webkit.org/306918@main> Reviewed commits have been landed. Closing PR #57891 and removing active labels.
EWS
Comment 4 2026-02-24 10:36:09 PST
Committed 305413.345@safari-7624-branch (6a48471e0ec1): <https://commits.webkit.org/305413.345@safari-7624-branch> Reviewed commits have been landed. Closing PR #4500 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.